# pomap

./: .gitignore  Cargo.toml  benchmark.sh  benchmark_strings.sh  comparison.sh  memory.sh  memory2.sh
.claude/skills/optimize/: SKILL.md
benches/: bench_graph.rs  gets_temp_graph.rs  insert_graph.rs  insert_hot_graph.rs  insert_hot_graph_bench.rs  operations.rs  pomap2_bench.rs  pomap_bench.rs  profile_insert.rs  resize_analysis.rs  scan_depth.rs
examples/: prof_insert.rs
proptest-regressions/: pomap.txt
src/: auth.rs  bitset.rs  lib.rs  merkle.rs  poaht.rs  pomap.rs  pomap2.rs  pomap3.rs  simd.rs  simd_bitset.rs
