[package]
name = "pomap"
version = "0.1.0"
edition = "2024"
authors = ["sam0x17"]
license = "MIT OR Apache-2.0"
description = "A Prefix-Ordered Hash Map (PoMap)"

[workspace.lints.clippy]
missing_const_for_fn = "deny"
missing_inline_in_public_items = "deny"

[features]
default = ["compare-keys"]
binary-search = []
compare-keys = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "operations"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
