[package]
name = "pomap"
version = "0.1.0"
edition = "2024"
authors = ["sam0x17"]
license = "MIT OR Apache-2.0"
description = "A Prefix-Ordered Hash Map (PoMap)"

[workspace.lints.clippy]
missing_const_for_fn = "deny"
missing_inline_in_public_items = "deny"

[features]
default = []

[dependencies]
sha2 = { version = "0.10", features = ["asm"] }
wide = "0.8"

[dev-dependencies]
criterion = { git = "https://github.com/sam0x17/criterion.rs" }
rand = { version = "0.10.0-rc.5", features = ["std"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[[bench]]
name = "pomap_bench"
harness = false
