[package]
name = "pomap"
version = "0.1.0"
edition = "2024"
authors = ["sam0x17"]
license = "MIT OR Apache-2.0"
description = "A Prefix-Ordered Hash Map (PoMap)"

[workspace.lints.clippy]
missing_const_for_fn = "deny"
missing_inline_in_public_items = "deny"

[features]
default = ["std", "tui"]
std = ["ahash/std", "ahash/runtime-rng"]
resize-logging = []
bench-string = []
dots = []
tui = ["ratatui", "crossterm"]

[dependencies]
ahash = { version = "0.8", default-features = false }
wide = { version = "0.7", default-features = false }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
criterion = { path = "../criterion.rs" }
hashbrown = "0.14"
rand = { version = "0.10.0-rc.5", features = ["std"] }
proptest = "1"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[[bench]]
name = "pomap_bench"
harness = false

[[bench]]
name = "gets_temp_graph"
harness = false

[[bench]]
name = "insert_graph"
harness = false

[[bench]]
name = "insert_hot_graph"
harness = false

[[bench]]
name = "profile_insert"
harness = false

[[bench]]
name = "bench_graph"
harness = false
